Fixed Alignment Issues

--- a/style.css
+++ b/style.css
@@ -47,9 +47,15 @@
   src: local("Bebas"), url("./fonts/Bebas.woff") format("woff");
 }
 
+html,
+body {
+  width: auto !important;
+  overflow-x: hidden !important;
+  box-sizing: border-box !important;
+}
+
 body {
   background-color: #fff;
-  overflow-x: hidden;
 }
 
 .navbar {
@@ -115,7 +121,6 @@ hr.line {
 .landing {
   width: 100%;
   height: 80vh;
-  border-bottom: 1.5px solid #000;
   overflow-x: visible;
 }
 
@@ -131,7 +136,7 @@ hr.line {
 .header h1 {
   text-align: center;
   margin-top: -65%;
-  margin-left: -10%;
+  margin-left: -5%;
 }
 
 .animate {
@@ -407,7 +412,6 @@ hr.line {
   width: 100%;
   height: 90vh;
   background: transparent;
-  border-bottom: 1.5px solid #000;
   display: inline-block;
 }
 
@@ -476,7 +480,6 @@ hr.line {
   margin-top: -5.5%;
   width: 100%;
   height: 90vh;
-  border-bottom: 1.5px solid #000;
   background: transparent;
 }
 /* rgba(6, 64, 19, 0.7) 0%, rgb(116, 254, 36) 79%, rgb(126, 255, 42) 100%) 100% center / cover, url(https://cdn.robinhood.com/assets/generated_assets/brand/_next/static/images/noise__d63eaf5….svg) rgb(0, 200, 5) */
@@ -527,7 +530,6 @@ hr.line {
   width: 100%;
   height: 90vh;
   background: transparent;
-  border-bottom: 1.5px solid #000;
 }
 
 .loan-header {
@@ -570,7 +572,6 @@ hr.line {
   margin-top: -5.5%;
   width: 100%;
   height: 95vh;
-  border-bottom: 1.5px solid #000;
   background: transparent;
 }
 
@@ -622,7 +623,6 @@ hr.line {
   margin-top: 5%;
   font-family: "Roboto";
   height: 125vh;
-  border-bottom: 1px solid #000;
 }
 
 .security-head {
@@ -816,7 +816,6 @@ hr.line {
 
 .about {
   height: 185vh;
-  border-bottom: 1.5px solid #000;
 }
 
 .about-head {
@@ -959,6 +958,10 @@ nav {
 }
 
 @media (max-width: 768px) {
+  * {
+    clear: both;
+  }
+
   .landing {
     height: 90vh;
   }
@@ -1436,6 +1439,11 @@ nav {
 
   .about {
     height: 230vh;
+  }
+
+  hr.line {
+    display: none;
+    border: none;
   }
 }
 /*
